--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
           <area shape="rect" coords="290,172,333,350" href="#RQ" alt="phone">
           <area shape="circle" coords="337,300,44" href="#Youth" alt="coffee">
       </map>
-        <a href="input.htm"> My Form</a>
+        <a href="form.htm"> My Form</a>
      <div id="RQ">
         <h1>My name is Ruqayyah</h1>
         I am a  <b>software</b> <span style="color: red; font-size: 35px;">developer</span> .
@@ -60,7 +60,7 @@
         <source media="(max-width:900px)" srcset="Images/vars.jpg">
         <img src="Images/sunset.jpg" alt="techVarsity">
     </picture>
-      <a href="Youtube.htm">My Youtube channel🌟✴🌠</a>
+      <a href="youTube.htm">My Youtube channel🌟✴🌠</a>
     <table>
         <tr>
           <th>Company</th>
